# SFGD_Unpacking

./: CMakeLists.txt  README.md
examples/: AverageLY.cpp  AverageLY_August.cpp  BabyMIND_ToT_Amplitude_matching.cpp  Bragg_Peak_For_Protons.cpp  CMakeLists.txt  Energy_Straight_Muon_Track.cpp  HG_LG_calib.cpp  HG_reconstructed.cpp  HG_reconstructed_obso.cpp  HG_vs_ToT_calib.cpp  LG_vs_ToT_calib.cpp  Max_LY_XZvsYZ.cpp  Muon_stop.cpp  Muon_stop_obso.cpp  Time_from_trigger.cpp  babyMindCalibration.cpp  babyMindUnpack.cpp  out_vs_pid.cpp
lib/: libBabyMINDUnpack.dylib
